# ros-walker-bot

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/ros-walker-bot/: obstacle_avoidance.hpp  walkerbot_pubsub.hpp
launch/: ros_walker_bot.launch
results/: cppcheck_result.txt  cpplint_result.txt
src/: obstacle_avoidance.cpp  ros_walker_bot_node.cpp  walkerbot_pubsub.cpp
